applications/hello-openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-openshift
  labels:
    app.kubernetes.io/part-of: openshift-quickstarts
    app.kubernetes.io/managed-by: openshift-quickstarts
