applications/hello-openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
  namespace: hello-openshift
  labels:
    app.kubernetes.io/name: hello-openshift
    app.kubernetes.io/part-of: openshift-quickstarts
spec:
  selector:
    app: hello-openshift
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
