applications/hello-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
  namespace: hello-openshift
  labels:
    app.kubernetes.io/name: hello-openshift
    app.kubernetes.io/part-of: openshift-quickstarts
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  to:
    kind: Service
    name: hello-openshift
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
